js/js.translator/testData/incremental/invalidation/moveFilesBetweenModulesWithCrossModuleInliner/lib2/l21.kt
inline fun qux(x: Int, y: Int) = foo(x) + bar(y)
